force-app/main/default/objects/Case_Record__c/Case_Record__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Case Record</label>
    <nameField>
        <label>Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>