force-app/main/default/objects/Case_Record__c/fields/Accepted_Formula__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Formula__c</fullName>
    <formula>if (contains (text (Accepted__c), &quot;Yes&quot;), 1, 0)</formula>
    <label>Point of Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>