force-app/main/default/objects/Case_Record__c/fields/Address_on_ID_Contracts_Only__c.field-meta.xml
<CustomField>
    <fullName>Address_on_ID_Contracts_Only__c</fullName>
    <inlineHelpText>Use if ID is only proof of Chicago residency but does not reflect current address.</inlineHelpText>
    <label>Address on ID, Contracts Only</label>
    <type>TextArea</type>
</CustomField>