force-app/main/default/objects/Case_Record__c/fields/Adequate_Dependent_Care__c.field-meta.xml
<CustomField>
    <fullName>Adequate_Dependent_Care__c</fullName>
    <inlineHelpText>Adequate Dependent Care from 8:30 AM - 4:00 PM</inlineHelpText>
    <label>Adequate Dependent Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>