force-app/main/default/objects/Case_Record__c/fields/Admissions_Identification_on_File__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Identification_on_File__c</fullName>
    <label>Admissions Identification on File</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State Identification Card</fullName>
            </value>
            <value>
                <fullName>Birth Certificate</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Social Security Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>