force-app/main/default/objects/Case_Record__c/fields/Admissions_Index_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Index_Weeks__c</fullName>
    <formula>if (ispickval(Program_Stage__c, &quot;Referred&quot;) || ispickval(Program_Stage__c, &quot;Applicant&quot;) || ispickval(Program_Stage__c, &quot;Accepted&quot;), 0, 

IF(ISBLANK(Program_Start_Date__c) ,0, 

IF(Program_Start_Date__c &gt; TODAY(), 0, 

if (Inactive_Date__c &lt; Program_Start_Date__c, 0, 

if (not (isblank (Inactive_Date__c)) &amp;&amp; (Inactive_Date__c - Program_Start_Date__c)/7 &gt; 5, 5,

if (not (isblank (Inactive_Date__c)), (Inactive_Date__c - Program_Start_Date__c)/7, 

if ((TODAY() - Program_Start_Date__c)/7 &gt; 5, 5,

(TODAY() - Program_Start_Date__c)/7)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of weeks active, up to 5 weeks.</inlineHelpText>
    <label># Admissions Index Weeks</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>