force-app/main/default/objects/Case_Record__c/fields/Advancement_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Inactive_Date__c</fullName>
    <inlineHelpText>Auto-fills to today&apos;s date when &apos;Advancement Status&apos; changes to &quot;Inactive&quot;, unless otherwise specified</inlineHelpText>
    <label>Advancement Inactive Date</label>
    <type>Date</type>
</CustomField>