force-app/main/default/objects/Case_Record__c/fields/Advancement_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Inactive_Reason__c</fullName>
    <inlineHelpText>Updated by Career Advancement Manager</inlineHelpText>
    <label>Advancement Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Advancement_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Job Loss, Returned to Advanced Training</fullName>
            </value>
            <value>
                <fullName>Job Loss, Referred to Cara Connects</fullName>
            </value>
            <value>
                <fullName>Job Loss, Referred to Recruitment</fullName>
            </value>
            <value>
                <fullName>Job Loss, Inactivated from Core Services</fullName>
            </value>
            <value>
                <fullName>Opted out of starting Advancement Services</fullName>
            </value>
            <value>
                <fullName>Opted out of continuing Advancement Services</fullName>
            </value>
            <value>
                <fullName>Independently working towards Advancement goals</fullName>
            </value>
            <value>
                <fullName>Reached Advancement goals</fullName>
            </value>
            <value>
                <fullName>Unresponsive to Advancement communication</fullName>
            </value>
            <value>
                <fullName>No call, no show to Advancement meeting(s)</fullName>
            </value>
            <value>
                <fullName>Other - See Inactivation Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>