force-app/main/default/objects/Case_Record__c/fields/Advancement_Initial_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Initial_Assessment_Date__c</fullName>
    <inlineHelpText>Updated by Career Advancement Manager when 3-part assessment is completed</inlineHelpText>
    <label>Advancement Initial Assessment Date</label>
    <type>Date</type>
</CustomField>