force-app/main/default/objects/Case_Record__c/fields/Advancement_Job_Matching_Status__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Job_Matching_Status__c</fullName>
    <formula>case (Eligible_for_Advancement_Job_Matching__c, 
&quot;Not Applicable&quot;, &quot;Yes/NA&quot;,
&quot;No&quot;, &quot;No&quot;,
&quot;Yes&quot;, &quot;Yes/NA&quot;,
&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advancement Job Matching Status</label>
    <type>Text</type>
</CustomField>