force-app/main/default/objects/Case_Record__c/fields/Advancement_Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Progress_Note__c</fullName>
    <description>Rollup Helper</description>
    <inlineHelpText>Most recent Advancement Meeting progress note.</inlineHelpText>
    <label>Advancement Progress Note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>