force-app/main/default/objects/Case_Record__c/fields/Advancement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Start_Date__c</fullName>
    <inlineHelpText>Auto-fills to date of first Advancement Meeting.</inlineHelpText>
    <label>Advancement Start Date</label>
    <type>Date</type>
</CustomField>