force-app/main/default/objects/Case_Record__c/fields/Advancement_Status__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Status__c</fullName>
    <inlineHelpText>Updated by Career Advancement Manager</inlineHelpText>
    <label>Advancement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive, Option to Return</fullName>
            </value>
            <value>
                <fullName>Inactive, Cannot Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>