force-app/main/default/objects/Case_Record__c/fields/Age_at_Program_Start__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Program_Start__c</fullName>
    <formula>if (isblank(Program_Start_Date__c), NULL,

FLOOR((Program_Start_Date__c - Birthdate_from_ClientContact__c)/365))</formula>
    <label>Age at Program Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>