force-app/main/default/objects/Case_Record__c/fields/Ages_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Ages_of_Children__c</fullName>
    <inlineHelpText>Until Nov 2018, &apos;Ages of Children&apos; field was on the participant&apos;s contact record. For those with multiple case records, there is an ambiguity as to when the data captured in this field was collected and if it&apos;s accurate as of the program start date.</inlineHelpText>
    <label>Ages of Children</label>
    <type>TextArea</type>
</CustomField>