force-app/main/default/objects/Case_Record__c/fields/Allowed_to_Return_After_Inactivation__c.field-meta.xml
<CustomField>
    <fullName>Allowed_to_Return_After_Inactivation__c</fullName>
    <label>Allowed to Return After Inactivated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, through any Portal (Send Inactivation Email)</fullName>
            </value>
            <value>
                <fullName>Yes, through any Portal</fullName>
                <label>Yes, through any Portal (No Inactivation Email)</label>
            </value>
            <value>
                <fullName>No, barred from Cara Enterprise</fullName>
            </value>
            <value>
                <fullName>Yes, as Resource Only due to background</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>