force-app/main/default/objects/Case_Record__c/fields/Alternative_Recommitment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Recommitment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Approved by IDS; IDS has given this participant permission to call student voicemail line weekly due to no access to Cara Central</inlineHelpText>
    <label>Alternative Recommitment Plan</label>
    <type>Checkbox</type>
</CustomField>