force-app/main/default/objects/Case_Record__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Exponent field. Not sure if referenced in unit tests, so did not change the API name. Changed the field type from Currency to Number. Updated nightly by Rollup Helper.</description>
    <label># Send Outs</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>