force-app/main/default/objects/Case_Record__c/fields/Any_Sexual_Based_Convictions__c.field-meta.xml
<CustomField>
    <fullName>Any_Sexual_Based_Convictions__c</fullName>
    <label>Any Sexual Based Convictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>