force-app/main/default/objects/Case_Record__c/fields/Arrested_in_Chicago_Cook_County__c.field-meta.xml
<CustomField>
    <fullName>Arrested_in_Chicago_Cook_County__c</fullName>
    <description>Field created in Jan 2019 as part of Incoming Participant Data Cleanup project. Anybody who has been arrested in Chicago/Cook County can utilize CGLA.</description>
    <inlineHelpText>Have you ever been arrested in Chicago/Cook County?

New field as of Jan 2019. Backfilled if information in &apos;Conviction History Narrative&apos; contained &quot;Cook&quot;.</inlineHelpText>
    <label>Arrested in Chicago/Cook County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>