force-app/main/default/objects/Case_Record__c/fields/Arrested_Outside_of_Chicago_Cook_County__c.field-meta.xml
<CustomField>
    <fullName>Arrested_Outside_of_Chicago_Cook_County__c</fullName>
    <inlineHelpText>Have you ever been arrested outside of Chicago/Cook County?</inlineHelpText>
    <label>Arrested Outside of Chicago/Cook County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>