force-app/main/default/objects/Case_Record__c/fields/Assessment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completion_Date__c</fullName>
    <formula>if(isnull(Stability_Assessment_Date__c ) || isnull(Job_Skills_Assessment_Date__c), NULL,

if(Job_Skills_Assessment_Date__c &gt;= Stability_Assessment_Date__c, Job_Skills_Assessment_Date__c,

Stability_Assessment_Date__c))</formula>
    <inlineHelpText>Date when both Stability Assessment and Job Skills Assessment have been completed.</inlineHelpText>
    <label>Assessment Completion Date</label>
    <type>Date</type>
</CustomField>