force-app/main/default/objects/Case_Record__c/fields/Attendance_Barriers_at_Intake__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Barriers_at_Intake__c</fullName>
    <inlineHelpText>If you have any upcoming court dates, appointments, etc. that would prevent you from being in attendance every day, please explain.</inlineHelpText>
    <label>Attendance Barriers at Intake</label>
    <type>TextArea</type>
</CustomField>