force-app/main/default/objects/Case_Record__c/fields/Attended_Core_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Attended_Core_Orientation__c</fullName>
    <formula>if (isblank (text (Scheduled_Program_Start_Date__c)), NULL,

if (ispickval (Program_Stage__c, &quot;Referred&quot;) || ispickval (Program_Stage__c, &quot;Applicant&quot;), 0,

if (Inactive_Date__c &gt; Classic_Orientation_Date__c, 1, 

if (isblank (Inactive_Date__c) &amp;&amp; today() &gt;= Program_Start_Date__c-1, 1, 0))))</formula>
    <label>Attended Classic Orientation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>