force-app/main/default/objects/Case_Record__c/fields/Attended_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Attended_Orientation__c</fullName>
    <label>Attended Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>