force-app/main/default/objects/Case_Record__c/fields/Average_Cleanslate_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Cleanslate_Score__c</fullName>
    <label>Average Cleanslate Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>