force-app/main/default/objects/Case_Record__c/fields/Background_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Result__c</fullName>
    <inlineHelpText>When set to &quot;Reviewed &amp; Approved&quot;, the &apos;Conviction History&apos; item on the SOE list will automatically be dated.</inlineHelpText>
    <label>Background Check Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Reviewed</fullName>
                <default>true</default>
                <label>Not Yet Reviewed</label>
            </value>
            <value>
                <fullName>Reviewed &amp; Approved</fullName>
            </value>
            <value>
                <fullName>Reviewed &amp; Needs Follow-Up</fullName>
            </value>
            <value>
                <fullName>Reviewed &amp; Inactivation to Follow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>