force-app/main/default/objects/Case_Record__c/fields/Background_Check_SOE_Date__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_SOE_Date__c</fullName>
    <label>Background Check SOE Date</label>
    <type>Date</type>
</CustomField>