force-app/main/default/objects/Case_Record__c/fields/Background_Check_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Submitted_Date__c</fullName>
    <inlineHelpText>Can be entered/updated on Intake form, Case Record, or Conviction History Service Entry.</inlineHelpText>
    <label>Background Check Submitted Date</label>
    <type>Date</type>
</CustomField>