force-app/main/default/objects/Case_Record__c/fields/Base_Savings_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Base_Savings_Contributions__c</fullName>
    <description>Rollup Helper, updated nightly.</description>
    <inlineHelpText>Includes Savings Voucher, Individual Contributions, and Match. As of Sept&apos;14, Voucher and Individual Contributions are not tracked as line items, and are instead part of verified or self-reported ending balance.</inlineHelpText>
    <label>Base Savings Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>