force-app/main/default/objects/Case_Record__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <inlineHelpText>Select benefits that participant has opted into with their employer.</inlineHelpText>
    <label>Opted Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vacation/Sick</fullName>
            </value>
            <value>
                <fullName>Retirement/401K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>