force-app/main/default/objects/Case_Record__c/fields/Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code__c</fullName>
    <description>Exponent field, formerly &apos;Bill Code&apos;. Did not change API name as not to disturb unit tests. Began collecting food security questions in Feb &apos;16.</description>
    <inlineHelpText>Within the past 12 months, the food I/we bought just didn&apos;t last and I/we didn&apos;t have money to get more.</inlineHelpText>
    <label>Food Insecurity Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Often True</fullName>
            </value>
            <value>
                <fullName>Sometimes True</fullName>
            </value>
            <value>
                <fullName>Never True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>