force-app/main/default/objects/Case_Record__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <description>Exponent field with instructions: Set to Non-billable when service authorization has expired. Formerly &apos;Billing Status&apos;. Did not change API name as not to mess up unit tests. &apos;# Days Employed, Non-SOE&apos; run nightly by Rollup Helper.</description>
    <label># Days Employed, Non-SOE</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>