force-app/main/default/objects/Case_Record__c/fields/Birth_Date_Age_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_Age_Verification_Status__c</fullName>
    <formula>if (isblank(Contracts_Birth_Date_Age_Documentation__c), &quot;Needs Review&quot;, 
if (includes (Contracts_Birth_Date_Age_Documentation__c, &quot;No Proof&quot;), &quot;Ineligible&quot;, 
if (includes (Contracts_Birth_Date_Age_Documentation__c, &quot;No Proof-Imported&quot;), &quot;Ineligible&quot;, 
&quot;Eligible&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Date / Age Verification Status</label>
    <type>Text</type>
</CustomField>