force-app/main/default/objects/Case_Record__c/fields/Birthdate_from_ClientContact__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_from_ClientContact__c</fullName>
    <formula>Main_Client__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate from Client/Contact</label>
    <type>Date</type>
</CustomField>