force-app/main/default/objects/Case_Record__c/fields/Can_Take_Lower_Salary__c.field-meta.xml
<CustomField>
    <fullName>Can_Take_Lower_Salary__c</fullName>
    <inlineHelpText>Used in conjunction with Placement Hours &amp; Wage table to assess quality of positions and fit for a specific student.</inlineHelpText>
    <label>Can Take Lower Salary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Check w/ IDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>