force-app/main/default/objects/Case_Record__c/fields/Cara_Central_Tutorial__c.field-meta.xml
<CustomField>
    <fullName>Cara_Central_Tutorial__c</fullName>
    <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;EmailToID=&quot;+ Main_Client__r.Id +
&quot;&amp;EmailFromID=0D2f3000000XZQy&quot; +
&quot;&amp;EmailTemplateId=a1Ef30000047MAM&quot; +
&quot;&amp;QMode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cara Central Tutorial</label>
    <type>Text</type>
</CustomField>