force-app/main/default/objects/Case_Record__c/fields/Cara_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Cara_Orientation__c</fullName>
    <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;EmailToID=&quot;+ Main_Client__r.Id +
&quot;&amp;EmailFromID=0D24y0000004DdD&quot; +
&quot;&amp;EmailTemplateId=a1E4y000004AOFB&quot; +
&quot;&amp;AttachmentId=0694y00000AJRo4,0694y00000AJRoJ&quot; +
&quot;&amp;QMode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cara Orientation Post-Meeting</label>
    <type>Text</type>
</CustomField>