force-app/main/default/objects/Case_Record__c/fields/Cara_Orientation_Meeting_Info__c.field-meta.xml
<CustomField>
    <fullName>Cara_Orientation_Meeting_Info__c</fullName>
    <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;EmailToID=&quot;+ Main_Client__r.Id +
&quot;&amp;EmailFromID=0D2f3000000TOrC&quot; +
&quot;&amp;EmailTemplateId=a1Ef3000004cI9V&quot; +
&quot;&amp;QMode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cara Orientation Meeting Info</label>
    <type>Text</type>
</CustomField>