force-app/main/default/objects/Case_Record__c/fields/Case_Record_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Age__c</fullName>
    <description>Exponent field: Based on Case Record Created Date. Formerly &apos;Case Record Age&apos;. API name not changed as not to disturb unit tests.</description>
    <formula>if ( ispickval(Program_Stage__c, &quot;Advancement Services&quot;), today()- Advancement_Start_Date__c,

Days_Since_Send_Out_Eligible__c - Intake_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&apos;# Days Since Send Out Eligible&apos; minus &apos;# Days Employed, Non-SOE&apos; minus &apos;# Days Program/Send Out Hold, Post-SOE&apos;.</inlineHelpText>
    <label># Days in SOE Pool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>