force-app/main/default/objects/Case_Record__c/fields/Case_Record_Connects_Timesheet_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Connects_Timesheet_Reminder__c</fullName>
    <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;EmailToID=&quot;+ Main_Client__r.Id +
&quot;&amp;EmailFromID=0D2f3000000L0ua&quot; +
&quot;&amp;EmailTemplateId=a1Ef3000003vimF&quot; +
&quot;&amp;QMode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connects Timesheet Reminder</label>
    <type>Text</type>
</CustomField>