force-app/main/default/objects/Case_Record__c/fields/Case_Record_ID_18_Digits__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_ID_18_Digits__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Case Record ID (18 Digits)</label>
    <type>Text</type>
</CustomField>