force-app/main/default/objects/Case_Record__c/fields/Case_Record_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record Lookup</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Case Records</relationshipLabel>
    <relationshipName>Case_Records</relationshipName>
    <type>Lookup</type>
</CustomField>