force-app/main/default/objects/Case_Record__c/fields/Cash_Handling_Experience__c.field-meta.xml
<CustomField>
    <fullName>Cash_Handling_Experience__c</fullName>
    <label>Cash Handling Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>