force-app/main/default/objects/Case_Record__c/fields/Check_Amount_Savings_Open__c.field-meta.xml
<CustomField>
    <fullName>Check_Amount_Savings_Open__c</fullName>
    <label>Check Amount, Savings Open</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>