force-app/main/default/objects/Case_Record__c/fields/Check_Number_Savings_Open__c.field-meta.xml
<CustomField>
    <fullName>Check_Number_Savings_Open__c</fullName>
    <label>Check Number, Savings Open</label>
    <length>15</length>
    <type>Text</type>
</CustomField>