force-app/main/default/objects/Case_Record__c/fields/Checking_Account_at_Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Checking_Account_at_Needs_Assessment__c</fullName>
    <description>Service entry was previously called &quot;Needs Assessment&quot; until Jan 2020.</description>
    <label>Checking Account at Stability Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>