force-app/main/default/objects/Case_Record__c/fields/Child_Care_SOE_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_SOE_Date__c</fullName>
    <label>Child Care SOE Date</label>
    <type>Date</type>
</CustomField>