force-app/main/default/objects/Case_Record__c/fields/Childcare_Consistently_Available__c.field-meta.xml
<CustomField>
    <fullName>Childcare_Consistently_Available__c</fullName>
    <label>Childcare Consistently Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>