force-app/main/default/objects/Case_Record__c/fields/Childcare_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Childcare_Narrative__c</fullName>
    <description>Field created in Oct. 2018 to replace the following fields: &apos;Primary Childcare Provider&apos;, &apos;Primary Childcare Provider Phone&apos;, &apos;Childcare Other Shifts&apos;, &apos;Backup Childcare Provider&apos;, &apos;Backup Childcare Provider Phone&apos;, and &apos;Enrolled in Headstart&apos;.</description>
    <inlineHelpText>Enter information regarding primary and backup childcare providers and the work shifts in which childcare is available.</inlineHelpText>
    <label>Childcare Narrative</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>