force-app/main/default/objects/Case_Record__c/fields/Class_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_End_Date__c</fullName>
    <formula>if ((ISPICKVAL( Program_Stage__c , &quot;Retention&quot;) || ISPICKVAL( Program_Stage__c , &quot;Retention&quot;) || ISPICKVAL( Program_Stage__c , &quot;Advancement Services&quot;)) &amp;&amp; not (isblank (Date_Prgm_Stage_to_Retention_Services__c)), Date_Prgm_Stage_to_Retention_Services__c - 1, 

if (not (isblank (Inactive_Date__c)), Inactive_Date__c, 

NULL))</formula>
    <inlineHelpText>First considers Date Program Stage changed to Retention Services, then considers Inactive Date. If neither applies, remains blank.</inlineHelpText>
    <label>Class End Date</label>
    <type>Date</type>
</CustomField>