force-app/main/default/objects/Case_Record__c/fields/Classic_Orientation_Date_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Classic_Orientation_Date_180_Days__c</fullName>
    <formula>Classic_Orientation_Date__c - 180</formula>
    <label>Classic Orientation Date - 180 Days</label>
    <type>Date</type>
</CustomField>