force-app/main/default/objects/Case_Record__c/fields/Classic_Orientation_Date__c.field-meta.xml
<CustomField>
    <fullName>Classic_Orientation_Date__c</fullName>
    <formula>if (isblank (text (Scheduled_Program_Start_Date__c)), NULL, 

if (not(ispickval (Program_Site_Track__c, &quot;Downtown&quot;) || ispickval(Program_Site_Track__c, &quot;South Side&quot;)), NULL,

if (ispickval(Scheduled_Program_Start_Date__c, &quot;2016-09-06&quot;), date (2016, 09, 06), 

if (datevalue(text(Scheduled_Program_Start_Date__c)) &gt; date (2015, 7, 1), datevalue(text(Scheduled_Program_Start_Date__c))-1, 

if (ispickval(Scheduled_Program_Start_Date__c, &quot;2014-12-01&quot;), date (2014, 11, 24), 

if (ispickval(Program_Site_Track__c, &quot;South Side&quot;)&amp;&amp; Program_Start_Date__c &lt; date (2015, 7, 1), Program_Start_Date__c-5, 

if (ispickval (Program_Site_Track__c, &quot;Downtown&quot;) &amp;&amp; Program_Start_Date__c &lt; date (2015, 7, 1), Program_Start_Date__c-6, 

NULL)))))))</formula>
    <inlineHelpText>Based off of Scheduled Program Start Date</inlineHelpText>
    <label>Classic Orientation Date</label>
    <type>Date</type>
</CustomField>