force-app/main/default/objects/Case_Record__c/fields/Clean_Driving_Record__c.field-meta.xml
<CustomField>
    <fullName>Clean_Driving_Record__c</fullName>
    <inlineHelpText>Free of accidents or moving violations as of day of CAM Assessment.

New field as of Feb 2019.</inlineHelpText>
    <label>Clean Driving Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>